# GEx

./: CMakeLists.txt
include/gex/: Qt.hpp  algorithm.hpp  base.hpp  cgal.hpp  color.hpp  comp.hpp  index.hpp  misc.hpp  polygon.hpp  prim.hpp  qt.hpp
include/gex/algorithm/: boost.hpp  chop.hpp  closestPoint.hpp  connect.hpp  convert.hpp  difference.hpp  distance.hpp  for_each.hpp  intersection.hpp  intersects.hpp  join.hpp  medial_axis.hpp  multiOffset.hpp  nonUniformOffset.hpp  num.hpp  offset.hpp  offset_details.hpp  perimeter.hpp  skeleton.hpp  sqrDistance.hpp  step.hpp  thicken.hpp  unify.hpp  union.hpp  util.hpp  voronoi.hpp  within.hpp
include/gex/algorithm/converter/: Generic.hpp  LineString.hpp  Polygon.hpp  Ring.hpp  Segment.hpp
include/gex/algorithm/functor/: BoundingSegments.hpp  ConnectSegments.hpp  ForEach.hpp  ForEachCurve.hpp  ForEachLineString.hpp  ForEachPoint.hpp  ForEachRing.hpp  ForEachSegment.hpp  Join.hpp  JoinSegmentsToRings.hpp  Offset.hpp  Pruning.hpp  SqrDistance.hpp
include/gex/algorithm/functor/detail/: buildArc.hpp  generateJunction.hpp
include/gex/algorithm/nearest/: Generic.hpp
include/gex/algorithm/pattern/: Concentric.hpp
include/gex/base/: Bounds.hpp  Coords.hpp  Curve.hpp  EigenTypedefs.hpp  Matrix.hpp  Point.hpp  PolarVec.hpp  Range.hpp  Ray.hpp  Vec.hpp
include/gex/bsp/node/: Geometry.hpp  Intersection.hpp
include/gex/color/: Color.hpp  Gradient.hpp
include/gex/comp/: TriangleMesh.hpp
include/gex/io/: DrawInterface.hpp  STL.hpp  read.hpp
include/gex/io/svg/: Buffer.hpp  Color.hpp  Draw.hpp  LineString.hpp  Point.hpp  Ring.hpp  Segment.hpp
include/gex/prim/: BoundingBox.hpp  LineString.hpp  MultiPoint.hpp  MultiPolygon.hpp  OrthogonalPlane.hpp  Polygon.hpp  Primitive.hpp  Ring.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp  Vertex.hpp
include/gex/raster/: marching_squares.hpp
include/gex/strategy/: join.hpp
samples/: Chop.cpp  ClosestPoint.cpp  Curvature.cpp  Hexagon.cpp  Join.cpp  JoinLineStrings.cpp  Offset.cpp  OffsetSample.cpp  OffsetSegment.cpp  OffsetWithDetails.cpp  Voronoi.cpp
samples/create/: circle.hpp
